--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>TypeScript React</title>
+    <link rel="stylesheet" href="./main.scss" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>TypeScript React</title>
-  <!-- inject:css -->
-  <!-- endinject -->
-</head>
-
-<body>
-  <div id="root"></div>
-  <!-- inject:js -->
-  <!-- endinject -->
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script src="./main.tsx"></script>
+  </body>
 </html>
-<!-- inject:git-hash -->
